--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -13,6 +13,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
