--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mylerna/cli",
+  "name": "@frontendplayer/cli",
   "version": "0.1.1",
   "description": "> TODO: description",
   "author": "xiyang.bai <xiyang.bai@zhangmen.com>",
