--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mylerna/create",
+  "name": "@frontendplayer/create",
   "version": "0.1.1",
   "description": "> TODO: description",
   "author": "xiyang.bai <xiyang.bai@zhangmen.com>",
