--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mylerna/init",
+  "name": "@frontendplayer/init",
   "version": "0.1.1",
   "description": "> TODO: description",
   "author": "xiyang.bai <xiyang.bai@zhangmen.com>",
