--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
@@ -24,5 +25,6 @@
     "fs-extra": "^10.0.0",
     "path": "^0.12.7",
     "pity": "^0.1.4"
-  }
+  },
+  "gitHead": "954aba9f7fa781276aa5e1f9790a81291286944d"
 }
