--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
@@ -21,5 +22,6 @@
   },
   "dependencies": {
     "fs-extra": "^10.0.0"
-  }
+  },
+  "gitHead": "954aba9f7fa781276aa5e1f9790a81291286944d"
 }
